--- a/ImageGallery/Base.lproj/Main.storyboard
+++ b/ImageGallery/Base.lproj/Main.storyboard
@@ -35,7 +35,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="1" green="0.24812236330000001" blue="0.17829380210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <segue destination="vdS-f5-ouW" kind="showDetail" id="f4k-KF-LCG"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -77,7 +79,7 @@
                 <splitViewController id="ojR-ZQ-egb" sceneMemberID="viewController">
                     <connections>
                         <segue destination="4jw-1V-603" kind="relationship" relationship="masterViewController" id="Yj3-0g-y0L"/>
-                        <segue destination="GJo-dM-L1e" kind="relationship" relationship="detailViewController" id="ThF-2G-jvU"/>
+                        <segue destination="vdS-f5-ouW" kind="relationship" relationship="detailViewController" id="ThF-2G-jvU"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lxX-ss-KWs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -170,13 +172,35 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="hyh-eJ-NLd"/>
                     </view>
+                    <navigationItem key="navigationItem" id="loZ-Ps-ttP"/>
                     <connections>
                         <outlet property="collectionView" destination="w0d-G5-7Xf" id="biB-xF-ns4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fwV-6f-fN5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1258" y="2262"/>
+            <point key="canvasLocation" x="-352.80000000000001" y="2295.2023988005999"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="moO-dc-TrQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vdS-f5-ouW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c8U-cT-ozh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GJo-dM-L1e" kind="relationship" relationship="rootViewController" id="IZb-le-NJD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dHD-tR-4bI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1361" y="2317"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="f4k-KF-LCG"/>
+    </inferredMetricsTieBreakers>
 </document>
